[metadata]
name = logaas
version = 0.0.1
summary = Logging as a Service
description-file =
    README.rst
author = OpenStack
author-email = openstack-dev@lists.openstack.org
home-page = http://www.openstack.org/
classifier =
    Environment :: OpenStack
    Intended Audience :: Developers
    Intended Audience :: Information Technology
    License :: OSI Approved :: Apache Software License
    Operating System :: POSIX :: Linux
    Programming Language :: Python
    Programming Language :: Python :: 2
    Programming Language :: Python :: 2.6
    Programming Language :: Python :: 2.7

[files]
packages =
    logaas

[entry_points]
console_scripts =
    logaas-manage = logaas.cmd.manage:main

[global]
setup-hooks =
    pbr.hooks.setup_hook
